--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,3 +5,6 @@
 
 
 css_tricks: [https://css-tricks.com/](https://css-tricks.com/)
+
+
+- border-generator: [https://kovart.github.io/dashed-border-generator/](https://kovart.github.io/dashed-border-generator/)
